# K-SecOps

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  go.mod  pyproject.toml  requirements.txt
.cursor/: mcp.json
.github/workflows/: ci-evidence-sync.yml  demo-pages.yml  demo-scenario.yml  secops-gate.yml
cmd/alert-worker/: main.go
config/: sbom-baseline.json  secops-baseline.json  test-sbom-baseline.json
docs/: AGENT_PROMPT.md  AWS_LIVE_SCAN.md  CI_EVIDENCE.md  CI_EVIDENCE_LATEST.md  COMPLIANCE_MAPPING.md  DEMO_SCRIPT.md  JD_MAPPING.md  PROJECT_SPEC.md  REPORT_DESIGN.md  VALIDATION_SOURCES.md  demo-viewer.html
docs/demo/: index.html  status.json
dummy-infra/: .env.leaked  README.md
dummy-infra/aws/: iam-admin-policy.json  s3-public-bucket-policy.json
dummy-infra/code/: banking_api.py  unsafe_sast.py
dummy-infra/docker/: Dockerfile.insecure
reports/: SAMPLE_AUDIT_REPORT.md  SAMPLE_DASHBOARD.html  SAMPLE_DASHBOARD_FAIL.html  sast.sarif
scripts/: ci_gate.py  demo_hub.py  demo_intentional_fail.py  demo_progress.py  demo_scenarios.py  generate_sample_dashboards.py  gh_auth.py  run_demo.py  run_scenario.py  sync_ci_evidence.py  test_alert_worker.py
src/: main.py
tests/: test_aws_auditor.py  test_aws_live_iam.py  test_ci_gate.py  test_compliance_mapper.py  test_compliance_report.py  test_dashboard_renderer.py  test_file_reader.py  test_integration.py  test_parsers.py  test_pii_masker.py  test_sandbox.py  test_sast_auditor.py  test_sast_semgrep.py  test_scan_dependencies.py  test_scan_infra.py  test_secret_auditor.py  test_supply_chain.py
(+41 files in other folders)
