[project]
name = "agentic-k-secops"
version = "0.1.0"
description = "DevSecOps compliance pipeline with MCP interface — Trivy/Checkov/boto3, ISMS-P/EFT reports, PR merge gate"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.27,<2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.35",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
k-secops = "main:run_stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/tools", "src/mcp_server", "src/main.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
